Keep (if possible) the selected page really selected in the thumbnail view when toggling a search.

BUG: 122788

svn path=/branches/KDE/3.5/kdegraphics/kpdf/; revision=545855